I believe the homodeus overflow issues have been properly updated

--- a/sources/work/work.css
+++ b/sources/work/work.css
@@ -87,6 +87,10 @@ html{
 
 
 /* MAIN ------------------------------------------------------------------------------------------------------------------------- */
+/* main{
+    overflow-x: hidden;
+} */
+
 main > div{
     width: 100%;
     height: 33vh;
@@ -712,6 +716,8 @@ span.lawn, span.flower{
     justify-content: space-between;
 
     & a{
+        pointer-events: all;
+
         &:nth-of-type(2){
             clip-path: inset(0 12.5% 0 12.5%);
         }
@@ -863,28 +869,15 @@ span.lawn, span.flower{
 /* HOMODEUS --------------------------------------------------------------------------------------------------------------------- */
 #homodeus .content{
     display: flex;
+    align-items: center;
 }
 
-.homodeus-content{
-    position: relative;
-    margin: auto;
-    max-width: 100%;
-    max-height: 100%;
-    aspect-ratio: 1271 / 1280;
-
-    & > div{
-        position: absolute;
-    }
-
-    & > a{
-        display: block;
-        position: relative;
-        pointer-events: all;
-
-        &:hover{
-            background-color: rgba(0, 0, 0, 0);
-        }
-    }
+#homodeus .out-container{
+    height: 111%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
 
     & img{
         width: 100%;
@@ -892,15 +885,49 @@ span.lawn, span.flower{
     }
 }
 
+.line-up{
+    position: relative;
+    height: 100%;
+    max-height: 90.1%;
+    max-width: 100%;
+    aspect-ratio: 1271 / 1280;
+}
+
 .out-fit{
+    position: absolute;
     width: 129.5%;
     height: 111%;
     inset: -5.5% auto auto -13.4%;
 }
 
+
+
+#homodeus .in-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & img{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
+
+a.in-fit{
+    pointer-events: all;
+
+    &:hover{
+        background-color: rgba(0, 0, 0, 0);
+    }
+}
+
 .in-fit{
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 1271 / 1280;
 }
 
 .homodeus-shadow{
@@ -1374,5 +1401,14 @@ span.lawn, span.flower{
             max-height: 50%;
             aspect-ratio: 1280 / 1024;
         }
+    }
+}
+
+
+
+@media (aspect-ratio <= 1202 / 1217) {
+    .line-up{
+        height: auto;
+        width: 100%;
     }
 }
